[package]
name = "google-jwt-signin"
version = "0.5.0"
authors = [
  "Nathan Fox <fuchsnj@gmail.com>",
  "Charles Johnson <charlesthomasjohnson0@gmail.com>",
  "Daniel James Baumann <dan.james.baumann@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/guapodero/google-jwt-signin"
license = "MIT/Apache-2.0"
description = "Verify ID tokens for Google SSO"
categories = ["authentication", "web-programming", "asynchronous"]
keywords = ["oauth", "jwt", "rustls", "async"]
edition = "2021"

[features]
default = ["blocking"]
blocking = ["ureq"]
async = ["async-trait", "tokio", "hyper-rustls", "hyper-util", "http-body-util", "bytes"]

[dependencies]
log = "~0.4"
env_logger = "~0.11"
base64 = "~0.22"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
ring = "=0.17.8"
http = "~1.1"
cache_control = "~0.2"

ureq = { version = "~2.9", features = ["native-certs"], optional = true }

async-trait = {version = "~0.1", optional = true}
tokio = { version = "1", optional = true }
hyper-rustls = { version = "~0.26", optional = true }
hyper-util = { version = "~0.1", features = ["client", "client-legacy", "tokio"], optional = true }
http-body-util = { version = "~0.1", optional = true }
bytes = { version = "~1.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
